# at-cli

./: .envrc  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENCE  README.md  config.sample.yaml  crowdin.yml  flake.nix  main.py  pyproject.toml  run.sh
.github/workflows/: lint.yml
atcodercli/: __builtins__.pyi  __init__.py  __main__.py  fetchpage.py  fetchresult.py  login.py  loginstat.py
atcodercli/commands/: add_problem.py  addproblem.py  init_contest.py  init_problem.py  init_template.py  initcontest.py  initproblem.py  inittemplate.py  login.py  me.py  submit_problem.py  test_template.py  testtemplate.py  watch_page.py  watch_result.py  watchpage.py  watchresult.py
atcodercli/locales/: atcodercli.pot
atcodercli/locales/zh_CN/LC_MESSAGES/: atcodercli.mo  atcodercli.po
atcodercli/utils/: config.py  confirm.py  get_session.py  problems.py
scripts/: atcli-dev  build-mo.py  extract-string  publish  test-code
src/: login.py
tests/: test_translation.py
utils/: confirm.py  get_session.py
